--- a/backend/nginx.conf
+++ b/backend/nginx.conf
@@ -7,8 +7,8 @@ http {
     upstream service_auth_api {
         server service_auth:8000;
     }
-    upstream service_baggage_api {
-        server service_baggage:8000;
+    upstream service_baggages_api {
+        server service_baggages:8000;
     }
     upstream service_meteo_ia_api {
         server service_meteo_ia:8000;
@@ -19,21 +19,21 @@ http {
 
         # Route toutes les requêtes commençant par /auth vers le service_auth
         location /auth/ {
-            proxy_pass http://service_auth/auth/;
+            proxy_pass http://service_auth_api/auth/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
 
         # Route toutes les requêtes commençant par /products vers le service_baggage
         location /baggages/ {
-            proxy_pass http://serice_baggage/baggages/;
+            proxy_pass http://service_baggages_api/baggages/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
 
         # Route toutes les requêtes commençant par /meteo vers le service_meteo_ia
         location /meteo/ {
-            proxy_pass http://service_meteo_ia/meteo/;
+            proxy_pass http://service_meteo_ia_api/meteo/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
