--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./backend/nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       service_auth:
         condition: service_healthy 
