--- a/Aerocast_BackEnd/nginx.conf
+++ b/Aerocast_BackEnd/nginx.conf
@@ -1,42 +1,233 @@
+# ============================================================================
+# Configuration Nginx - API Gateway ANAC
+# Route les requêtes vers les bons microservices
+# ============================================================================
+
 events {
     worker_connections 1024;
 }
 
 http {
-    # Définition des serveurs amont (upstream) avec les noms de services Docker
-    upstream service_auth_api {
+    # Configuration générale
+    include /etc/nginx/mime.types;
+    default_type application/json;
+    
+    # Logs
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log warn;
+    
+    # Timeouts
+    proxy_connect_timeout 60s;
+    proxy_send_timeout 60s;
+    proxy_read_timeout 60s;
+    
+    # Buffer sizes
+    client_max_body_size 10M;
+    proxy_buffer_size 128k;
+    proxy_buffers 4 256k;
+    proxy_busy_buffers_size 256k;
+
+    # Upstream des microservices
+    upstream service_auth {
         server service_auth:8000;
     }
-    upstream service_baggages_api {
-        server service_baggages:8000;
+    
+    upstream service_bagages {
+        server service_bagages:8000;
     }
-    upstream service_meteo_ia_api {
+    
+    upstream service_meteo_ia {
         server service_meteo_ia:8000;
     }
 
+    # Configuration du serveur principal
     server {
         listen 80;
+        server_name localhost;
 
-        # Route toutes les requêtes commençant par /auth vers le service_auth
-        location /auth/ {
-            proxy_pass http://service_auth_api/auth/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
+        # Headers de sécurité
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+
+        # CORS Headers (à ajuster selon vos besoins)
+        add_header Access-Control-Allow-Origin "*" always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, PATCH, OPTIONS" always;
+        add_header Access-Control-Allow-Headers "Authorization, Content-Type, Accept" always;
+        add_header Access-Control-Max-Age 3600 always;
+
+        # Gestion des requêtes OPTIONS (CORS preflight)
+        if ($request_method = 'OPTIONS') {
+            return 204;
         }
 
-        # Route toutes les requêtes commençant par /products vers le service_baggage
-        location /baggages/ {
-            proxy_pass http://service_baggages_api/baggages/;
+        # ====================================================================
+        # ROUTES AUTHENTIFICATION
+        # ====================================================================
+        location /api/v1/auth {
+            proxy_pass http://service_auth;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # Route toutes les requêtes commençant par /meteo vers le service_meteo_ia
-        location /meteo/ {
-            proxy_pass http://service_meteo_ia_api/meteo/;
+        location /api/v1/utilisateurs {
+            proxy_pass http://service_auth;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # ====================================================================
+        # ROUTES BAGAGES
+        # ====================================================================
+        location /api/v1/bagages {
+            proxy_pass http://service_bagages;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /api/v1/qr {
+            proxy_pass http://service_bagages;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # ====================================================================
+        # ROUTES MÉTÉO IA
+        # ====================================================================
+        location /api/v1/meteo {
+            proxy_pass http://service_meteo_ia;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Timeout plus long pour l'inférence IA
+            proxy_read_timeout 120s;
+        }
+
+        location /api/v1/aeroports {
+            proxy_pass http://service_meteo_ia;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # ====================================================================
+        # ROUTES ADMIN (Distribuées selon le contexte)
+        # ====================================================================
+        location /api/v1/admin/auth {
+            proxy_pass http://service_auth;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /api/v1/admin/bagages {
+            proxy_pass http://service_bagages;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /api/v1/admin/meteo {
+            proxy_pass http://service_meteo_ia;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # ====================================================================
+        # WEBSOCKETS (Support temps réel)
+        # ====================================================================
+        location /ws/bagages {
+            proxy_pass http://service_bagages;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Timeouts pour WebSocket
+            proxy_read_timeout 3600s;
+            proxy_send_timeout 3600s;
+        }
+
+        location /ws/alertes-meteo {
+            proxy_pass http://service_meteo_ia;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            proxy_read_timeout 3600s;
+            proxy_send_timeout 3600s;
+        }
+
+        # ====================================================================
+        # HEALTH CHECKS
+        # ====================================================================
+        location /health {
+            access_log off;
+            return 200 '{"status":"healthy","service":"gateway"}';
+            add_header Content-Type application/json;
+        }
+
+        # Health check pour chaque service
+        location /health/auth {
+            proxy_pass http://service_auth/health;
+        }
+
+        location /health/bagages {
+            proxy_pass http://service_bagages/health;
+        }
+
+        location /health/meteo {
+            proxy_pass http://service_meteo_ia/health;
+        }
+
+        # ====================================================================
+        # DOCUMENTATION API (Swagger)
+        # ====================================================================
+        location /docs {
+            proxy_pass http://service_auth/docs;
+            proxy_set_header Host $host;
+        }
+
+        location /redoc {
+            proxy_pass http://service_auth/redoc;
+            proxy_set_header Host $host;
+        }
+
+        # ====================================================================
+        # PAGE D'ACCUEIL / FALLBACK
+        # ====================================================================
+        location / {
+            return 200 '{"message":"API ANAC Aviation Platform","version":"1.0.0","documentation":"/docs"}';
+            add_header Content-Type application/json;
+        }
+
+        # Gestion des erreurs
+        error_page 502 503 504 /50x.json;
+        location = /50x.json {
+            return 503 '{"error":"Service temporairement indisponible"}';
+            add_header Content-Type application/json;
         }
     }
 }
-    
