--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,146 +1,184 @@
-services:
+  version: '3.8'
 
-  # Service d'authentication
-  service_auth:
-    build:
-      context: ./backend/app/api/service_auth_api
-      dockerfile: Dockerfile
-    image: service_auth
-    command: ["uv", "run", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "${PORT}", "${DEBUG:+--reload}"]
-    env_file:
-      - .env.dev
-    ports:
-      - "${PORT_1}:${PORT}"
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
-    environment:
-      - SERVICE_NAME=${SERVICE_NAME_1}
-    healthcheck:
-      test: ["CMD", "curl", "-f", "${HEALTH_CHECK_ENDPOINT}"]
-      interval: 20s
-      timeout: 10s
-      retries: 10
-      start_period: 90s
-    networks:
-      - app-network
-    depends_on:
-      - db
+  services:
+    # Base de données PostgreSQL
+    db:
+      image: postgres:16-alpine
+      container_name: aerocast_db
+      restart: unless-stopped
+      volumes:
+        - db_data:/var/lib/postgresql/data
+      environment:
+        POSTGRES_USER: ${POSTGRES_USER}
+        POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+        POSTGRES_DB: ${POSTGRES_DB}
+      ports:
+        - "5432:5432"
+      healthcheck:
+        test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+        interval: 10s
+        timeout: 5s
+        retries: 5
+        start_period: 10s
+      networks:
+        - app-network
 
-  # Service de traçabilité de baggage
-  service_baggages:
-    build:
-      context: ./backend/app/api/service_baggages_api
-      dockerfile: Dockerfile
-    image: service_baggages
-    command: ["uv", "run", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "${PORT}", "${DEBUG:+--reload}"]
-    env_file:
-      - .env.dev
-    ports:
-      - "${PORT_2}:${PORT}"
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
-    environment:
-      - SERVICE_NAME=${SERVICE_NAME_2}
-    healthcheck:
-      test: ["CMD", "curl", "-f", "${HEALTH_CHECK_ENDPOINT}"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 90s
-    networks:
-      - app-network
-    depends_on:
-      - db
-  
-   # Service de météo IA
-  service_meteo_ia:
-    build:
-      context: ./backend/app/api/service_meteo_ia_api
-      dockerfile: Dockerfile
-    image: service_meteo_ia
-    command: ["uv", "run", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "${PORT}", "${DEBUG:+--reload}"]
-    env_file:
-      - .env.dev
-    ports:
-      - "${PORT_3}:${PORT}"
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
-    environment:
-      - SERVICE_NAME=${SERVICE_NAME_3}
-    healthcheck:
-      test: ["CMD", "curl", "-f", "${HEALTH_CHECK_ENDPOINT}"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 90s
-    networks:
-      - app-network
-    depends_on:
-      - db
-  
-  # frontend:
-  #     build:
-  #       context: ./frontend
-  #       dockerfile: Dockerfile
-  #     image: aerocast-frontend
-  #     env-file:
-  #     - .env.dev
-  #     ports:
-  #       - "{PORT_F1}:{PORT_F2}"
-  #     depends_on:
-  #       service_auth:
-  #         condition: service_healthy 
-  #       service_baggages:
-  #         condition: service_healthy
-  #       service_meteo_ia:
-  #         condition: service_healthy 
-  #       networks:
-  #         - app-network
+    # Redis pour cache
+    redis:
+      image: redis:7-alpine
+      container_name: aerocast_redis
+      restart: unless-stopped
+      ports:
+        - "6379:6379"
+      healthcheck:
+        test: ["CMD", "redis-cli", "ping"]
+        interval: 10s
+        timeout: 5s
+        retries: 5
+      networks:
+        - app-network
 
-    # Service de passerelle des APIs: Nginx
-  gateway:
-    image: nginx:alpine
-    ports:
-      - "80:80"
-    volumes:
-      - ./backend/nginx.conf:/etc/nginx/nginx.conf:ro
-    depends_on:
-      service_auth:
-        condition: service_healthy 
-      service_baggages:
-        condition: service_healthy
-      service_meteo_ia:
-        condition: service_healthy
-    networks:
-      - app-network
-  
-  # service rabbitmq pour les files de messages
-  rabbitmq:
-    image: rabbitmq:3-management-alpine
-    ports:
-      - "5672:5672"
-      - "15672:15672"
-    environment:
-      RABBITMQ_DEFAULT_USER: guest
-      RABBITMQ_DEFAULT_PASS: guest
-    healthcheck:
-      test: ["CMD", "rabbitmq-diagnostics", "check_port_connectivity"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-      start_period: 10s
-    
-  db:
-    image: postgres
-    container_name: db
-    volumes:
-      - db_data:/var/lib/postgresql/data
-    env_file:
-      - .env.dev
+    # RabbitMQ pour messaging
+    rabbitmq:
+      image: rabbitmq:3-management-alpine
+      container_name: aeroacast_rabbitmq
+      restart: unless-stopped
+      ports:
+        - "5672:5672"
+        - "15672:15672"
+      environment:
+        RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER:-guest}
+        RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASS:-guest}
+      healthcheck:
+        test: ["CMD", "rabbitmq-diagnostics", "check_port_connectivity"]
+        interval: 30s
+        timeout: 10s
+        retries: 5
+        start_period: 10s
+      networks:
+        - app-network
 
-volumes:
-  db_data:
+    # Service d'authentification
+    service_auth:
+      build:
+        context: ./Aerocast_BackEnd/app/api/service_auth_api
+        dockerfile: Dockerfile
+      image: aerocast_service_auth
+      container_name: aerocast_auth
+      restart: unless-stopped
+      command: uv run -- python -m uvicorn main:app --host 0.0.0.0 --port 8000 ${DEBUG:+--reload}
+      env_file:
+        - .env.dev
+      environment:
+        - SERVICE_NAME=service_auth
+        - DATABASE_URL=${DATABASE_URL}
+      ports:
+        - "${PORT_AUTH:-8001}:8000"
+      extra_hosts:
+        - "host.docker.internal:host-gateway"
+      healthcheck:
+        test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+        interval: 20s
+        timeout: 10s
+        retries: 5
+        start_period: 30s
+      networks:
+        - app-network
+      depends_on:
+        db:
+          condition: service_healthy
+        redis:
+          condition: service_healthy
 
-networks:
-  app-network:
+    # Service de traçabilité des bagages
+    service_bagages:
+      build:
+        context: ./Aerocast_BackEnd/app/api/service_baggages_api
+        dockerfile: Dockerfile
+      image: aerocast_service_bagages
+      container_name: aerocast_bagages
+      restart: unless-stopped
+      command: uv run -- python -m uvicorn main:app --host 0.0.0.0 --port 8000 ${DEBUG:+--reload}
+      env_file:
+        - .env.dev
+      environment:
+        - SERVICE_NAME=service_bagages
+        - DATABASE_URL=${DATABASE_URL}
+      ports:
+        - "${PORT_BAGAGES:-8002}:8000"
+      extra_hosts:
+        - "host.docker.internal:host-gateway"
+      healthcheck:
+        test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+        interval: 20s
+        timeout: 10s
+        retries: 5
+        start_period: 30s
+      networks:
+        - app-network
+      depends_on:
+        db:
+          condition: service_healthy
+        redis:
+          condition: service_healthy
+        rabbitmq:
+          condition: service_healthy
+
+    # Service de météo IA
+    service_meteo_ia:
+      build:
+        context: ./Aerocast_BackEnd/app/api/service_meteo_ia_api
+        dockerfile: Dockerfile
+      image: aerocast_service_meteo_ia
+      container_name: aerocast_meteo_ia
+      restart: unless-stopped
+      command: uv run -- python -m uvicorn main:app --host 0.0.0.0 --port 8000 ${DEBUG:+--reload}
+      env_file:
+        - .env.dev
+      environment:
+        - SERVICE_NAME=service_meteo_ia
+        - DATABASE_URL=${DATABASE_URL}
+      ports:
+        - "${PORT_METEO:-8003}:8000"
+      extra_hosts:
+        - "host.docker.internal:host-gateway"
+      healthcheck:
+        test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+        interval: 20s
+        timeout: 10s
+        retries: 5
+        start_period: 60s
+      networks:
+        - app-network
+      depends_on:
+        db:
+          condition: service_healthy
+        redis:
+          condition: service_healthy
+
+    # API Gateway Nginx
+    gateway:
+      image: nginx:alpine
+      container_name: aerocast_gateway
+      restart: unless-stopped
+      ports:
+        - "80:80"
+      volumes:
+        - ./Aerocast_BackEnd/nginx.conf:/etc/nginx/nginx.conf:ro
+      depends_on:
+        service_auth:
+          condition: service_healthy
+        service_bagages:
+          condition: service_healthy
+        service_meteo_ia:
+          condition: service_healthy
+      networks:
+        - app-network
+
+  volumes:
+    db_data:
+      driver: local
+
+  networks:
+    app-network:
       driver: bridge
