Première version des deux services d'auth et de baggages

--- a/backend/.env.dev
+++ b/backend/.env.dev
@@ -1,7 +1,10 @@
+DATABASE_HOST=postgres
+DATABASE_PORT=5432
+DATABASE_NAME=appdb
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
-DATABASE_URL=postgresql://postgres:postgres@localhost:5433/postgres
+DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5433/postgres
 
 PROJECT_NAME=AEROCAST
 PROJECT_DESC=IA Météo Aéronautique + Traçabilité Bagages en Temps Réel
