--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -40,42 +40,45 @@ services:
   # # -------------------------------
   # # Services Application
   # # -------------------------------
-  # auth:
-  #   build:
-  #     context: .
-  #     dockerfile: services/auth/Dockerfile
-  #   env_file: .env
-  #   depends_on:
-  #     postgres:
-  #       condition: service_healthy
-  #   ports:
-  #     - "8001:8000"
-  #   labels:
-  #     - "traefik.enable=true"
-  #     - "traefik.http.routers.auth.rule=Host(`auth.localhost`) && PathPrefix(`/`)"
-  #     - "traefik.http.routers.auth.entrypoints=web"
-  #     - "traefik.http.services.auth.loadbalancer.server.port=8000"
+  auth:
+    build:
+      context: .
+      dockerfile: services/auth/Dockerfile
+    env_file: .env
+    depends_on:
+      postgres:
+        condition: service_healthy
+    ports:
+      - "8001:8000"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.auth.rule=Host(`auth.localhost`) && PathPrefix(`/`)"
+      - "traefik.http.routers.auth.entrypoints=web"
+      - "traefik.http.services.auth.loadbalancer.server.port=8000"
 
-  # baggage:
-  #   build:
-  #     context: .
-  #     dockerfile: services/baggage/Dockerfile
-  #   env_file: .env
-  #   depends_on:
-  #     - postgres
-  #   ports:
-  #     - "8002:8000"
-  #   labels:
-  #     - "traefik.enable=true"
-  #     - "traefik.http.routers.baggage.rule=Host(`baggage.localhost`) && PathPrefix(`/`)"
-  #     - "traefik.http.routers.baggage.entrypoints=web"
-  #     - "traefik.http.services.baggage.loadbalancer.server.port=8000"
+  baggage:
+    build:
+      context: .
+      dockerfile: services/baggage/Dockerfile
+    env_file: .env
+    depends_on:
+      - postgres
+    ports:
+      - "8002:8000"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.baggage.rule=Host(`baggage.localhost`) && PathPrefix(`/`)"
+      - "traefik.http.routers.baggage.entrypoints=web"
+      - "traefik.http.services.baggage.loadbalancer.server.port=8000"
 
   weather:
     build:
       context: .
       dockerfile: services/weather/Dockerfile
     env_file: .env
+    environment:
+    - RUN_MIGRATIONS=true
+    - SERVICE_NAME=services.weather
     depends_on:
       - postgres
       - rabbitmq
@@ -202,6 +205,11 @@ services:
       - rabbitmq
       - postgres
       - weather
+    env_file: .env
+    volumes:
+      - ./services/weather:/app/services/weather
+      - ./libs:/app/libs
+
 
   celery-beat:
     build:
@@ -213,6 +221,9 @@ services:
       - postgres
       - weather
     env_file: .env
+    volumes:
+      - ./services/weather:/app/services/weather
+      - ./libs:/app/libs
 
 volumes:
   aerocast_db_data:
