--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,7 +21,7 @@ dependencies = [
     "opentelemetry-instrumentation-fastapi>=0.60b0",
     "opentelemetry-instrumentation-sqlalchemy>=0.60b0",
     "opentelemetry-sdk>=1.39.0",
-    "passlib[bcrypt]>=1.7.4",
+    "passlib[argon2,bcrypt]>=1.7.4",
     "prometheus-client>=0.23.1",
     "psycopg2-binary>=2.9.11",
     "pydantic[email]>=2.12.5",
@@ -33,11 +33,19 @@ dependencies = [
     "aio-pika>=9.5.8",
     "qrcode>=8.2",
     "redis[async]>=7.1.0",
+    "pytest>=9.0.2",
+    "httpx>=0.28.1",
+    "aiosqlite>=0.21.0",
+    "pytest-asyncio>=1.3.0",
 ]
 
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["services*", "libs*"]
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+
 
 
 [tool.uv]
