--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,17 +1,25 @@
+# ---------------------------
+# Base de données
+# ---------------------------
 DATABASE_HOST=postgres
 DATABASE_PORT=5433
 DATABASE_NAME=appdb
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
+POSTGRES_PASSWORD=yourpassword
 POSTGRES_DB=postgres
-DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5433/postgres
+DATABASE_URL=postgresql+asyncpg://postgres:yourpassword@localhost:5433/postgres
 
+# ---------------------------
+# Projet
+# ---------------------------
 PROJECT_NAME=AEROCAST
 PROJECT_DESC=IA Météo Aéronautique + Traçabilité Bagages en Temps Réel
 API_V1_STR=/api/v1
 PROJECT_VERSION=1.0.0.0
-    
 
+# ---------------------------
+# Services
+# ---------------------------
 SERVICE_NAME_1=service_auth
 SERVICE_NAME_2=service_baggages
 SERVICE_NAME_3=service_meteo_ia
@@ -19,7 +27,9 @@ SERVICE_NAME_4=service_orientation
 
 HEALTH_CHECK_ENDPOINT=http://localhost:8000/health
 
-# DOCKER
+# ---------------------------
+# Docker / Développement
+# ---------------------------
 DEBUG=True
 PORT=8000
 PORT_1=8001
@@ -30,4 +40,7 @@ PORT_F1=3000
 PORT_F2=80
 BACKEND_CORS_ORIGINS=http://localhost:8000
 
-SECRET_KEY=changemeverystrongsecret
+# ---------------------------
+# Sécurité
+# ---------------------------
+SECRET_KEY=your-very-strong-secret
