--- a/backend/.env
+++ b/backend/.env
@@ -5,6 +5,11 @@ DATABASE_NAME=appdb
 DATABASE_USER=app
 DATABASE_PASSWORD=change-me
 
+# Postgres required envs for docker-compose
+POSTGRES_DB=appdb
+POSTGRES_USER=app
+POSTGRES_PASSWORD=change-me
+
 # FastAPI / JWT
 SECRET_KEY=changemeverystrongsecret
 ACCESS_TOKEN_EXPIRE_MINUTES=60
